# OffTheBeatenBudget

./: Dockerfile  environment.yml  requirements.txt
backend/: Dockerfile  main.py  pyproject.toml
backend/tests/: test_main.py
frontend/budgetapp/: package-lock.json
